# SystemResourceTracker

./: .gitignore  .replit  anicent concepts & quantum.txt  app.py  config.py  draft.txt  installation_guide.md  model_handler.py  pyproject.toml  quantum theories a view from ancients concepts(2).docx  replit.nix
saved_code_data/: qiskit_code_data.json  qiskit_info.json  repositories.json
utils/: __init__.py  code_generator.py  data_processor.py  instruction_learner.py  model_trainer.py  repo_processor.py  sanskrit_nlp.py  visualizer.py
